--- a/.github/workflows/AdGuardHome.yml
+++ b/.github/workflows/AdGuardHome.yml
@@ -1,36 +1,75 @@
-# This is a basic workflow to help you get started with Actions
-
-name: CI
-
-# Controls when the workflow will run
+name: Build AdGuardHome for OpenWrt 24.10 (MT7981 AX3000T)
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
-  push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
-
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
-
-    # Steps represent a sequence of tasks that will be executed as part of the job
+    runs-on: ubuntu-22.04
+    timeout-minutes: 120
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v4
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
+      - name: Checkout OpenWrt source
+        uses: actions/checkout@v4
+        with:
+          repository: openwrt/openwrt
+          ref: openwrt-24.10
+          fetch-depth: 0
+          path: openwrt  # Checkout into subdir
+      - name: Checkout OpenWrt packages repo
+        uses: actions/checkout@v4
+        with:
+          repository: openwrt/packages
+          path: packages
+          ref: master  # For latest AdGuardHome
+          fetch-depth: 0
+      - name: Copy dependencies into OpenWrt tree
         run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
+          # Copy AdGuardHome
+          rm -rf openwrt/package/net/adguardhome || true
+          mkdir -p openwrt/package/net
+          cp -r packages/net/adguardhome openwrt/package/net/
+          # Copy golang (required by AdGuardHome Makefile)
+          rm -rf openwrt/package/lang/golang || true
+          mkdir -p openwrt/package/lang
+          cp -r packages/lang/golang openwrt/package/lang/
+      - name: Update AdGuardHome to latest version
+        run: |
+          cd openwrt
+          LATEST_VERSION=$(curl -s https://api.github.com/repos/AdguardTeam/AdGuardHome/releases/latest | grep tag_name | cut -d '"' -f4 | sed 's/^v//')
+          sed -i "s/PKG_VERSION:=.*/PKG_VERSION:=$LATEST_VERSION/" package/net/adguardhome/Makefile
+      - name: Install build dependencies
+        run: |
+          sudo apt update
+          sudo apt install -y \
+            build-essential clang flex bison gawk gcc-multilib g++-multilib \
+            gettext libncurses-dev libssl-dev python3 python3-setuptools \
+            rsync unzip zlib1g-dev file wget
+      - name: Update and install all feeds
+        run: |
+          cd openwrt
+          ./scripts/feeds update -a
+          ./scripts/feeds install -a
+      - name: Prepare minimal config for MT7981 (AX3000T)
+        run: |
+          cd openwrt
+          make distclean
+          {
+            echo "CONFIG_TARGET_mediatek=y"
+            echo "CONFIG_TARGET_mediatek_filogic=y"
+            echo "CONFIG_TARGET_mediatek_filogic_DEVICE_xiaomi_mi-router-ax3000t=y"
+            echo "CONFIG_PACKAGE_adguardhome=m"
+          } > .config
+          make defconfig
+      - name: Build toolchain (must be done before building packages)
+        run: |
+          cd openwrt
+          make toolchain/install -j$(nproc)
+      - name: Build AdGuardHome package only
+        run: |
+          cd openwrt
+          make package/adguardhome/compile -j$(nproc) V=s IGNORE_ERRORS=1  # Added IGNORE_ERRORS for debugging if needed
+      - name: Upload built packages
+        uses: actions/upload-artifact@v4
+        with:
+          name: adguardhome-mt7981-openwrt-24.10
+          path: |
+            openwrt/bin/packages/**/adguardhome*.ipk
+            openwrt/bin/targets/**/packages/adguardhome*.ipk
